--- a/reaction.html
+++ b/reaction.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="container">
-  <h2>Harish reaction timer</h2>
+  <h2>Harish Bala reaction timer</h2>
 
   <p id="target">Your Time </p>
 
